[package]
name = "btc-spv"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5", features = ["derive"] }
lazy_static = "1.5"
hex = "0.4"
#rocksdb = "0.22"
serde = { version = "1", features = ["derive"] }
serde_json = "1"